# sinex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs
tests/: parser.rs
